Media query on guide covers + pulling fix

--- a/public/tip.css
+++ b/public/tip.css
@@ -307,7 +307,7 @@ input.edit-tip__rating {
 	width: auto;
 	border: none;
 	color: black !important;
-	height: 32px;
+	height: 30px;
 	border-radius: 0px;
 	overflow: hidden;
   border: 2px solid rgba(0,0,0,.1);
